--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p id="error" class="error"></p>
           </div>
           <input type="email" id="email" placeholder="email@">
-          <input type="submit" value="submit" placeholder="Subscribe to monthly newsletter">
+          <input class="btn" type="submit" value="submit" placeholder="Subscribe to monthly newsletter">
         </form>
       </div>
 
@@ -48,7 +48,7 @@
           A confirmation email has been sent to <span id="email-confirmation"></span> 
           Please open it and click the button inside to confirm your subscription.
         </p>
-        <input type="submit" value="continue" placeholder="Dismiss message">
+        <input class="btn" type="submit" value="continue" placeholder="Dismiss message">
 
       </div>
 
