--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <label for="">Email address</label>
             <p id="error" class="error"></p>
           </div>
-          <input type="email" id="email" placeholder="email@">
-          <input class="btn" type="submit" value="submit" placeholder="Subscribe to monthly newsletter">
+          <input type="email" id="email" placeholder="email@" style="background-color: none;">
+          <input type="submit" class="btn" value="Subscribe to monthly newsletter">
         </form>
       </div>
 
@@ -45,10 +45,11 @@
         <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 64 64"><defs><linearGradient id="a" x1="100%" x2="0%" y1="0%" y2="100%"><stop offset="0%" stop-color="#FF6A3A"/><stop offset="100%" stop-color="#FF527B"/></linearGradient></defs><g fill="none"><circle cx="32" cy="32" r="32" fill="url(#a)"/><path stroke="#FFF" stroke-width="4" d="m18.286 34.686 8.334 7.98 19.094-18.285"/></g></svg>
         <h1>Thanks for subscribing!</h1>
         <p>
-          A confirmation email has been sent to <span id="email-confirmation"></span> 
+          A confirmation email has been sent to 
+          <strong><span id="email-confirmation"></span></strong> 
           Please open it and click the button inside to confirm your subscription.
         </p>
-        <input class="btn" type="submit" value="continue" placeholder="Dismiss message">
+        <input id="continue" class="btn" type="submit" value="Dismiss message" >
 
       </div>
 
